# AppImageUpdaterBridge

./: .travis.yml  AppImageUpdaterBridge.pri  CMakeLists.txt
include/: appimageupdaterbridge.hpp  appimageupdaterbridgeinterface.hpp
src/: appimageupdaterbridge.cc  zsyncwriter_p.cc
tests/: AppImageDeltaRevisioner.hpp  start_test.sh
